ASSERTION FAILED: m_suspendIfNeededWasCalled https://bugs.webkit.org/show_bug.cgi?id=268194 rdar://121689893

Reviewed by Darin Adler.

Protect the scriptExecutionContext in NavigatorBase::serviceWorker()
before passing it to ServiceWorkerContainer::create().

* Source/WebCore/page/NavigatorBase.cpp:
(WebCore::NavigatorBase::serviceWorker):

Canonical link: https://commits.webkit.org/273637@main